# YetAnotherSLAM

./: .gitignore  CMakeLists.txt  README.md
config/: fr1.yaml
dataset/: dataset.md
include/: YAMLParser.h  camera.h  common.h  frame.h
include/dataloader/: dataloader.h  fireburg_dataloader.h
src/: CMakeLists.txt  YAMLParser.cpp  camera.cpp  frame.cpp  main.cpp
src/dataloader/: fireburg_dataloader.cpp
